try on MultiTargetStrategy.java