@@ -3,14 +3,14 @@ package game.towerdefens.strategy;
 import game.towerdefens.entity.Enemy;
 import java.util.List;
 
-public class SingleTargerStrategy implements TargetingStrategy{
+public class SingleTargetStrategy implements TargetingStrategy{
 
     @Override
     public List<Enemy> selectTargets(List<Enemy> enemiesInRange){
         if (enemiesInRange.isEmpty()){
             return List.of();
         }
-        return List.of(enemiesInRange.get(0));
+        return List.of(enemiesInRange.getFirst());
     }
 
 }
